# DeckShell

./: .CMakeLists.txt.kate-swp  .gitignore  .gitmodules  CMakeLists.txt
compositor/: ARCHITECTURE_ANALYSIS.md  CMakeLists.txt  CopyOutput.qml  Decoration.qml  GeometryAnimation.qml  OutputMenuBar.qml  PrimaryOutput.qml  SurfaceContent.qml  TaskBar.qml  TitleBar.qml  WindowMenu.qml  WorkspaceProxy.qml  helper.cpp  layersurfacecontainer.cpp  output.cpp  output.cpp.backup  output.h  qmlengine.cpp  rootsurfacecontainer.cpp  shellhandler.cpp  surfacewrapper.cpp.backup  treeland.cpp  treelandconfig.cpp  treelandlogging.cpp  wallpaperimage.h  wallpaperprovider.cpp
compositor-bak/: CMakeLists.txt  helper.cpp  helper.h  layersurfacecontainer.h  main.cpp  main.cpp.backup  output.cpp  popupsurfacecontainer.cpp  popupsurfacecontainer.h  qmlengine.cpp  qmlengine.h  rootsurfacecontainer.h  shellhandler.h  surfacewrapper.h.backup  wallpaperimage.cpp
compositor-bak/dde-shell/: CMakeLists.txt
compositor-bak/protocols/: treeland-dde-shell-v1.xml
compositor-bak/qml/: Decoration.qml  DockPreview.qml  OutputMenuBar.qml  PrimaryOutput.qml  TaskWindowPreview.qml  TitleBar.qml  WindowMenu.qml  WindowPickerLayer.qml
compositor-bak/qml/Animations/: GeometryAnimation.qml  LaunchpadAnimation.qml  LayerShellAnimation.qml  MinimizeAnimation.qml  MinimizeAnimation.qml.backup  ShowDesktopAnimation.qml
compositor-bak/qml/Effects/: Blur.qml  LaunchpadCover.qml.backup
compositor-bak/surface/: surfacecontainer.cpp  surfacefilterproxymodel.cpp  surfaceproxy.cpp  surfacewrapper.h
compositor-bak/utils/: cmdline.cpp
compositor-bak/workspace/: workspace.h  workspacemodel.cpp
compositor/cmake/: DefineTarget.cmake
compositor/examples/test_capture/: CMakeLists.txt  player.cpp
compositor/examples/test_monitor_active_event/: CMakeLists.txt
compositor/examples/test_multitaskview/: CMakeLists.txt
compositor/examples/test_primary_output/: CMakeLists.txt
compositor/examples/test_set_treeland_wallpaper/: CMakeLists.txt
compositor/examples/test_show_desktop/: CMakeLists.txt
compositor/examples/test_super_overlay_surface/: CMakeLists.txt
compositor/examples/test_virtual_output/: CMakeLists.txt
compositor/examples/test_wallpaper_color/: CMakeLists.txt
compositor/examples/test_window_appearance/: CMakeLists.txt
compositor/examples/test_window_bg/: CMakeLists.txt
compositor/examples/test_window_cursor/: CMakeLists.txt
compositor/examples/test_window_overlapped/: CMakeLists.txt
compositor/examples/test_window_picker/: CMakeLists.txt
compositor/examples/test_xdgport_wallpaper/: CMakeLists.txt
compositor/misc/: CMakeLists.txt
compositor/protocols/: deckcompositor-shortcut-manager-v1.xml
compositor/qml/: LockScreen.qml  SurfaceContent.qml  SwitchViewDelegate.qml  TaskSwitcher.qml  WorkspaceSwitcher.qml  WorkspaceSwitcher.qml.backup
compositor/qml/Animations/: LaunchpadAnimation.qml.backup  LayerShellAnimation.qml.backup  NewAnimation.qml
compositor/qml/Effects/: LaunchpadCover.qml
compositor/src/: CMakeLists.txt  main.cpp
compositor/src/config/: treelandconfig.cpp  treelandconfig.hpp
compositor/src/core/: lockscreen.cpp  lockscreen.h  qmlengine.cpp  shellhandler.cpp  treeland.cpp
compositor/src/greeter/: greeterproxy.cpp  sessionmodel.cpp  sessionmodel.h  usermodel.cpp
compositor/src/modules/: CMakeLists.txt
compositor/src/output/: output.cpp
compositor/src/plugins/: CMakeLists.txt
compositor/src/seat/: helper.cpp  helper.h
compositor/src/session/: session.cpp
compositor/src/treeland-shortcut/: CMakeLists.txt
compositor/src/utils/: cmdline.cpp
compositor/src/wallpaper/: wallpaperimage.cpp  wallpaperitem.cpp  wallpaperitem.h
compositor/surface/: surfacecontainer.h  surfacewrapper.cpp
compositor/tests/test_protocol_personalization/: CMakeLists.txt
compositor/tests/test_protocol_prelaunch-splash/: CMakeLists.txt
compositor/tests/test_protocol_primary-output/: CMakeLists.txt
compositor/tests/test_protocol_shortcut/: CMakeLists.txt
compositor/tests/test_protocol_virtual-output/: CMakeLists.txt
compositor/tests/test_protocol_wallpaper-color/: CMakeLists.txt
compositor/tests/test_protocol_window-management/: CMakeLists.txt
compositor/tests/test_window_picker/: CMakeLists.txt
compositor/workspace/: workspace.cpp  workspaceanimationcontroller.cpp
dconfig2cpp/: CMakeLists.txt
lib/gamepad/: .gitignore  ARTIFACTS.md  CHANGELOG.md  CMakeLists.txt  EVENT_FLOW.md  LICENSE  NOTICE  README.md  README_WAYLAND.md  RELEASE_CHECKLIST.md  THIRD_PARTY.md  VENDORED_VERSION.md  VERSIONING.md  json-example.md
lib/gamepad/examples/: CMakeLists.txt
lib/gamepad/protocols/: treeland-gamepad-v1.xml
lib/gamepad/qml/: CMakeLists.txt  abstractgamepadactionsource.h  custommappingmanager.cpp  custommappingmanager.h  gamepad.cpp  gamepad.h  gamepadactionkeymapper.cpp  gamepadactionkeymapper.h  gamepadactionrouter.cpp  gamepadactionrouter.h  gamepadconfigmanager.cpp  gamepadconfigmanager.h  gamepaddevicemodel.cpp  gamepaddevicemodel.h  gamepadkeynavigation.cpp  gamepadkeynavigation.h  gamepadmanager.cpp  gamepadmanager.h  gamepadqmlplugin.cpp  gamepadqmlplugin.h  mappingeditorbridge.cpp  mappingeditorbridge.h  serviceactionrouter.cpp  serviceactionrouter.h
lib/gamepad/scripts/: ctest_no_skip.sh
lib/gamepad/src/: CMakeLists.txt
lib/gamepad/tests/: CMakeLists.txt  test_action_mapper.cpp  test_action_mapper_repeat.cpp  test_action_mapping_profile.cpp  test_backend_provider_regression.cpp  test_calibration_store_json.cpp  (+22 more)
qtwaylandscanner/: CMakeLists.txt
treeland-dde-shell-client/: CMakeLists.txt  DDEShellClientConfig.cmake.in  README.md  README_QML.md  layer-shell-qt-qml-analysis.md
treeland-dde-shell-client/declarative/: CMakeLists.txt  types.cpp  types.h
treeland-dde-shell-client/examples/: CMakeLists.txt  README.md  demo.qml  launcher.cpp  launcher.h  main.cpp  widgetdemo.cpp  widgetdemo.h
treeland-dde-shell-client/src/: CMakeLists.txt  ddeshellclient_export.h  shellsurface.cpp  shellsurface.h  waylandmanager.cpp  waylandmanager.h  window.cpp  window.h
(+200 files in other folders)
